--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     environment:
       SERVICE_VERSION: v2
       MONGO_DB_URL: 'mongodb://mongodb:27017/ratings'
+      MONGO_DB_USERNAME: ratings
+      MONGO_DB_PASSWORD: pass1234
   
   mongodb:
     image: bitnami/mongodb:5.0.2-debian-10-r2
@@ -14,3 +16,8 @@ services:
       # - 27017:27017
     volumes:
       - './databases:/docker-entrypoint-initdb.d'
+    environment:
+      MONGODB_ROOT_PASSWORD: 'pass1234'
+      MONGODB_USERNAME: 'ratings'
+      MONGODB_PASSWORD: 'pass1234'
+      MONGODB_DATABASE: 'ratings'
