--- a/.github/workflows/dev-env.yml
+++ b/.github/workflows/dev-env.yml
@@ -22,4 +22,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: exzenous/bookinfo-ratings:dev
+          tags: ghcr.io/exzenous/bookinfo-ratings:dev
